Fix contrast errors first page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,7 +28,6 @@ blockquote {
 a {
     color: #4C979F;
     text-decoration: none;
-    font-weight: bold;
 }
 
 a:hover,
@@ -44,6 +43,10 @@ h4 a:hover,
 h5 a:hover {
   text-decoration: none;
   color: #045c64;
+}
+.small-text-link {
+  color: #045c64;
+  font-weight: bold;
 }
 
 h1 {
@@ -177,7 +180,7 @@ html {
 
 /* Main menu */
 .navbar-light .navbar-nav .nav-main-menu {
-  color: #4c979f;
+  color: #045c64;
 }
 
 .navbar-light .navbar-nav .nav-main-menu:hover,
@@ -185,6 +188,7 @@ html {
 .navbar-light .navbar-nav .nav-main-menu:active,
 .navbar-light .navbar-nav .nav-main-menu.active {
   color: #045c64;
+  font-weight: bold;
   text-decoration: none;
 }
 
